--- a/mail-service.properties
+++ b/mail-service.properties
@@ -4,3 +4,5 @@ spring.mail.port=587
 spring.mail.username=fooodbaronline@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.consumer.group-id=reservation-service
