--- a/mail-service.properties
+++ b/mail-service.properties
@@ -1,8 +1,9 @@
 server.port=9084
-spring.mail.host=smtp.example.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fooodbaronline@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=reservation-service
