--- a/room-service.properties
+++ b/room-service.properties
@@ -1,1 +1,4 @@
 server.port=9083
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/hoteling
+spring.datasource.username=root
