--- a/room-reservation-service.properties
+++ b/room-reservation-service.properties
@@ -3,3 +3,6 @@ RESERVATION_SERVICE_URL=http://localhost:9082
 ROOM_SERVICE_URL=http://localhost:9083
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=reservation-service
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/hoteling
+spring.datasource.username=root
