--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,3 +1,6 @@
 server.port=9082
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=reservation-service
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/hoteling
+spring.datasource.username=root
