--- a/room-reservation-service.properties
+++ b/room-reservation-service.properties
@@ -1,6 +1,7 @@
-GUEST_SERVICE_URL=http://localhost:9081
-RESERVATION_SERVICE_URL=http://localhost:9082
-ROOM_SERVICE_URL=http://localhost:9083
+#GUEST_SERVICE_URL=http://localhost:9081
+#RESERVATION_SERVICE_URL=http://localhost:9082
+#ROOM_SERVICE_URL=http://localhost:9083
+server.port=9080
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.consumer.group-id=reservation-service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
