--- a/guest-service.properties
+++ b/guest-service.properties
@@ -1,1 +1,4 @@
 server.port=9081
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://postgres:5432/hoteling
+spring.datasource.username=root
