--- a/guest-service.properties
+++ b/guest-service.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://postgres:5432/hoteling
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=root
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
