--- a/guest-service.properties
+++ b/guest-service.properties
@@ -2,4 +2,5 @@ server.port=9081
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://postgres:5432/hoteling
 spring.datasource.username=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
