--- a/guest-service.properties
+++ b/guest-service.properties
@@ -1,5 +1,4 @@
 server.port=9081
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres:5432/hoteling
-spring.datasource.username=guest_user
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/hoteling
+spring.datasource.username=root
